chore : update README.md, build.gradle, testCode example

--- a/build.gradle
+++ b/build.gradle
@@ -51,9 +51,52 @@ dependencies {
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.junit.platform:junit-platform-suite'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+    
+    // 최소 설정으로 단순화
+    maxParallelForks = 1
+    forkEvery = 0  // JVM 재사용
+    
+    // 기본 로깅만
+    testLogging {
+        events "failed"
+    }
+    
+    // JVM 옵션 최소화
+    jvmArgs = ['-Xmx512m']
+}
+
+// 단위 테스트만 실행
+task unitTest(type: Test) {
+    useJUnitPlatform {
+        excludeTags 'integration', 'performance'
+    }
+    testClassesDirs = sourceSets.test.output.classesDirs
+    classpath = sourceSets.test.runtimeClasspath
+    maxParallelForks = 1
+}
+
+// 통합 테스트만 실행  
+task integrationTest(type: Test) {
+    useJUnitPlatform {
+        includeTags 'integration'
+    }
+    testClassesDirs = sourceSets.test.output.classesDirs
+    classpath = sourceSets.test.runtimeClasspath
+    maxParallelForks = 1
+}
+
+// 성능 테스트만 실행
+task performanceTest(type: Test) {
+    useJUnitPlatform {
+        includeTags 'performance'
+    }
+    testClassesDirs = sourceSets.test.output.classesDirs
+    classpath = sourceSets.test.runtimeClasspath
+    maxParallelForks = 1
 }
