--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,18 @@
 # Gradle ??
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Duser.country=US -Duser.language=en -Duser.variant -XX:+UseParallelGC
 
+# Java Toolchain ?? - Java 21 ?? ??
+org.gradle.java.installations.auto-detect=false
+org.gradle.java.installations.auto-download=false
+
 # Virtual Thread ??? ?? JDK 21 ??
 java.toolchain.version=21
 
-# Gradle Daemon ???
+# Gradle Daemon ??
 org.gradle.daemon=true
-org.gradle.parallel=true
-org.gradle.configureondemand=true
+org.gradle.parallel=false
+org.gradle.configureondemand=false
+
+# Worker ?? ?? ??
+org.gradle.workers.max=1
+org.gradle.caching=false
